--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -11,14 +11,12 @@ main:
     url: '#projects'
     weight: 30
   - name: Publications
-    url: '#featured'
+    url: '#publications'
     weight: 50
-  - name: Contact
-    url: '#contact'
-    weight: 60
+
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
   - name: CV
-    url: assets/media/resume_web.pdf
+    url: authors/admin/resume_web.pdf
     weight: 70
